[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xthulu"
requires-python = ">=3.11"
version = "0.9.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["xthulu"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }
hiredis = { file = "requirements/hiredis.txt" }

[tool.black]
line-length = 80

[tool.ruff]
lint.ignore = [
	# ambiguous variable name
	"E741",
]
line-length = 80
target-version = "py311"
